fixed css overflow issue
Former-commit-id: fd2c4c8da892d91a9960cf41ec776021770fa3f2 [formerly 41bbe402a89fc07eb77b393c8b11244f2f61a985]
Former-commit-id: 3e7cc029212f519a227c66c3ea892e0269edb39a

--- a/client/src/css/report.css
+++ b/client/src/css/report.css
@@ -44,6 +44,7 @@
   border     : 1px solid #DDD;
   background : white;
   overflow-y : auto;
+  overflow-x : hidden;
 }
 
 .report-compressed {
